2011-04-27 Dietmar Warning
 * /devices/bjt2: removed - all GP extensions of this model are now in the bjt model, see
    Changelog 2011-03-03 and 2011-03-10

2011-04-27  Robert Larice
 * */** :
    code cleanup
      function pointer invocation, (*p)(...)  --->  p(...)
      structure access,            (*p).foo   --->  p->foo
      some casts, etc

2011-04-17 Dietmar Warning
 * /bsim3v2/b3v2set.c, /bsim3/b3set.c: allow multiple call to setup w/ correct node collapsing

2011-04-15  Robert Larice
 * src/spicelib/analysis/cktsens.c :
   fix allocation and ownership of auxiliary CKTmatrix CKTrhs etc objects
   FIXME: invoke release_context() when returning due to errors

2011-04-12  Dietmar Warning
 * devices: merged bsim3v1a code with bsim3v0
 * devices: merged bsim3v1s code with bsim3v1
 * update this situation to DEVICES, configure.ac, src/Makefile.am,
   spicelib/parser/inpdomod.c, inp2m.c, devices/dev.c

2011-04-09  Robert Larice
 * src/frontend/plotting/x11.c :
    bugfix, segfault when closing a plot window
      fix the fix from 2011-02-11
      currentgraph is a dynamical scoped variable
   in response to
     http://sourceforge.net/tracker/?func=detail&atid=423915&aid=3263437&group_id=38962
   FIXME, need to be fixed for ms-windows as well

2011-04-09  Robert Larice
 * src/spicelib/analysis/cktsens.c :
    bugfix, fix sensitvity calculation (for the dc-2+.cir testcase)

2011-04-02  Robert Larice
 * src/frontend/plotting/x11.c :
   extend the fix from 2011-02-11
     for other ways of closing a plot window.
   in response to
     http://sourceforge.net/tracker/?func=detail&atid=423915&aid=3263437&group_id=38962

2011-03-24  Dietmar Warning
 * xspice/icm/GNUmakefile.in: sun cc needs modified dependency flags (-xMD)

2011-03-18  Dietmar Warning
 * frontend/typedefs.c, outitf.c: bug no. 3214252 fixed

2011-03-16 Dietmar Warning
 * plotit.c: fix the wrong x-axis label for temp-sweep and res-sweep by
   using macros SV_XXX for vector types
