@@ -9,8 +9,6 @@
 
 #ifndef X_DISPLAY_MISSING
 
-#include <X11/Intrinsic.h>	/* required for Widget */
-
 disp_fn_Init_t             X11_Init;
 disp_fn_NewViewport_t      X11_NewViewport;
 disp_fn_Close_t            X11_Close;
@@ -24,14 +22,6 @@ disp_fn_SetColor_t         X11_SetColor;
 disp_fn_Update_t           X11_Update;
 disp_fn_Clear_t            X11_Clear;
 
-void handlekeypressed(Widget w, caddr_t clientdata, caddr_t calldata);
-void handlebuttonev(Widget w, caddr_t clientdata, caddr_t calldata);
-void slopelocation(GRAPH *graph, int x0, int y0);
-void zoomin(GRAPH *graph);
-void hardcopy(Widget w, caddr_t client_data, caddr_t call_data);
-void killwin(Widget w, caddr_t client_data, caddr_t call_data);
-void redraw(Widget w, caddr_t client_data, caddr_t call_data);
-void resize(Widget w, caddr_t client_data, caddr_t call_data);
 int X11_Input(REQUEST *request, RESPONSE *response);
 
 #endif /* X_DISPLAY_MISSING */
